--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,18 +11,21 @@
         <h1>MY BOOKS</h1>
         <a href="/#" class="newBook">New</a>
         <hr>
-        <div class="container">
-            <div class="img"></div>
-            <h2 class="title">The title goes here</h2>
-            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa iure architecto id obcaecati aspernatur nulla incidunt sapiente provident dolores a nesciunt quis numquam in tenetur unde veritatis, dolorem fuga!</p>
-            <h3>Rating:</h3>
-            <h3>Date:</h3>
-            <form method="post">
-                <button class="delete" formaction="/delete/:id">Delete</button>
-                <button class="edit" formaction="/edit/:id">Edit</button>
-            </form>
-            <hr>
-        </div>
+        <% contents.forEach((content) => { %>
+            <div class="container">
+                <div class="img"></div>
+                <h2 class="title"><%= content.title %></h2>
+                <p class="content"><%= content.content %></p>
+                <h3>Rating: <%= content.rating %></h3>
+                <h3>Date: <%= new Date(content.recent).toISOString().split('T')[0] %></h3>
+                <form method="post">
+                    <button class="delete" type="submit" formaction="/delete/<%= content.id %>">Delete</button>
+                    <button class="edit" type="submit" formaction="/edit/<%= content.id %>">Edit</button>
+                </form>
+                <hr>
+            </div>
+        <% }); %>
+        
     </div>
 </body>
 </html>
