achieved complete functionality but theres a problem in edit form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <h1>MY BOOKS</h1>
-        <a href="/#" class="newBook">New</a>
+        <a href="/new" class="newBook">New</a>
         <hr>
         <% contents.forEach((content) => { %>
             <div class="container">
