--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,11 @@
     font-family: "Arial", sans-serif;
 }
 
+body,html{
+    width: 100%;
+    height: 100%;
+}
+
 .main{
     margin-top: 50px;
     max-width: 800px;
@@ -120,4 +125,53 @@ form button.delete:active {
 
 .container hr{
     margin-top: 1.3rem;
+}
+
+.container2 {
+    max-width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px 40px;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+input,
+textarea {
+  margin-bottom: 20px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1em;
+  outline: none;
+  transition: border 0.3s;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #007bff;
+}
+
+button.full-width {
+    display: block;
+    text-align: center;
+    width: 100%;
+    text-decoration: none;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px;
+    font-size: 1em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+  
+button.full-width:hover {
+    background-color: #0056b3;
 }
